Fix item alignment in form

--- a/microservices/admin/imports/client/pages/InterestRatesPage/InterestRatesDialogForm/InterestRatesDialogForm.scss
+++ b/microservices/admin/imports/client/pages/InterestRatesPage/InterestRatesDialogForm/InterestRatesDialogForm.scss
@@ -4,7 +4,7 @@
 
   padding: 12px;
 
-   > * {
+  > * {
     margin-bottom: 0;
     padding-right: 8px;
   }
@@ -22,6 +22,10 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+
+    > * {
+      margin: 0;
+    }
   }
 
   .current-rates {
@@ -29,11 +33,11 @@
     align-items: center;
     flex-direction: row;
 
-     > table {
+    > table {
       padding: 4px;
     }
 
-     > * {
+    > * {
       margin-right: 4px;
     }
   }
